Fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 * {
-  overflow: hidden;
+  overflow-x: hidden;
 }
